client: Use the correct serial with file transfer cancellation

When using Copy, Move, Push and Pull with progress callbacks, the
progress callbacks increment the connection serial, so retrieve the
serial immediately after the dbus method call so that the correct serial
is used for cancellation.

https://bugzilla.gnome.org/show_bug.cgi?id=720058